@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: unixWm.test,v 1.36 2003/11/18 01:47:51 dgp Exp $
+# RCS: @(#) $Id: unixWm.test,v 1.37 2004/06/16 20:03:19 jenglish Exp $
 
 package require tcltest 2.2
 eval tcltest::configure $argv
@@ -728,13 +728,13 @@ test unixWm-20.8 {Tk_WmCmd procedure, "grid" option} unix {
 } {1 {expected integer but got "bar"}}
 test unixWm-20.9 {Tk_WmCmd procedure, "grid" option} unix {
     list [catch {wm grid .t 10 11 -2 13} msg] $msg
-} {1 {widthInc can't be < 0}}
+} {1 {widthInc can't be <= 0}}
 test unixWm-20.10 {Tk_WmCmd procedure, "grid" option} unix {
     list [catch {wm grid .t 10 11 12 bogus} msg] $msg
 } {1 {expected integer but got "bogus"}}
 test unixWm-20.11 {Tk_WmCmd procedure, "grid" option} unix {
     list [catch {wm grid .t 10 11 12 -1} msg] $msg
-} {1 {heightInc can't be < 0}}
+} {1 {heightInc can't be <= 0}}
 
 catch {destroy .t}
 catch {destroy .icon}
